--- a/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
+++ b/Rapport/1Chapters/1Preanalysis/feedback_feedforward.tex
@@ -1,11 +1,11 @@
 \section{Feedback versus Feedforward System} \label{sec:feedback}
 
-At this point it is yet to be determined if the system will be based on a feedback or a feedforward system. The choices are to design a feedback system that will decide what to do, based on real-time measurements from a sensor e.g. accelerometer, or a feedforward system that will analyse an input signal and react from this analysis. Since there are no well documented experiments concerning sensors in loudspeaker cabinets further experiments are to be deducted. A possible solution for a feedback system is depicted on \autoref{fig:feedbacksystem}. This system depicted will be further investigated to see if it is plausible.
+At this point it is yet to be determined if the system will be based on a feedback or a feedforward system. The choices are to design a feedback system that will decide what to do, based on real-time measurements from a sensor e.g. accelerometer, or a feedforward system that will analyse an input signal and react from an analysis. Since there are no well documented experiments concerning sensors in loudspeaker cabinets further experiments are to be deducted. A possible solution for a feedback system is depicted on \autoref{fig:feedbacksystem}. This system depicted will be further investigated to see if it is plausible.
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.75\textwidth]{Feedback_Acc2}
-\caption{How a possible feedback system should be implemented in the speaker}
+\caption{How a possible feedback system could be implemented in the loudspeaker.}
 \label{fig:feedbacksystem}
 \end{figure}
 
